minijinja/tests/snapshots/test_templates__vm@namespace_bad.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ namespace(42) }}"
info: {}
input_file: minijinja/tests/inputs/namespace_bad.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "expected object or keyword arguments, got number",
    name: "namespace_bad.txt",
    line: 1,
}

invalid operation: expected object or keyword arguments, got number (in namespace_bad.txt:1)
------------------------------ namespace_bad.txt ------------------------------
   1 > {{ namespace(42) }}
     i    ^^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    namespace: minijinja::functions::builtins::namespace,
}
-------------------------------------------------------------------------------

